tweak(card mod) add methods to fill up id card fields
Способ через ручной набор работает? все поля можно заполнить, есть подсказки.
Так же есть способ набора параметров через crew records.

--- a/nano/templates/identification_computer.tmpl
+++ b/nano/templates/identification_computer.tmpl
@@ -36,6 +36,15 @@
 
 	<div class='item'>
 	  <div class='itemLabel'>
+		Terminations:
+	  </div>
+	  <div class='itemContent'>
+		{{:helper.link('Terminate ' + data.id_owner, 'gear', {'action' : 'terminate'}, data.id_rank == "Terminated" ? 'disabled' : null, data.id_rank == "Terminated" ? 'disabled' : 'linkDanger')}}
+	  </div>
+	</div>
+
+	<div class='item'>
+	  <div class='itemLabel'>
 		Registered Name:
 	  </div>
 	  <div class='itemContent'>
@@ -51,16 +60,87 @@
 		{{:helper.link(data.id_account_number, 'pencil', {'action' : 'edit', 'account' : 1})}}
 	  </div>
 	</div>
-	
+
 
 	<div class='item'>
-	  <div class='itemLabel'>
-		Terminations:
-	  </div>
-	  <div class='itemContent'>
-		{{:helper.link('Terminate ' + data.id_owner, 'gear', {'action' : 'terminate'}, data.id_rank == "Terminated" ? 'disabled' : null, data.id_rank == "Terminated" ? 'disabled' : 'linkDanger')}}
-	  </div>
+		<div class='itemLabel'>
+			Sex:
+		</div>
+		<div class='itemContent'>
+			{{:helper.link(data.sex , 'pencil', {'action' : 'edit', 'sex' : 1})}}
+		</div>
 	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			Age:
+		</div>
+		<div class='itemContent'>
+			{{:helper.link(data.age , 'pencil', {'action' : 'edit', 'age' : 1})}}
+		</div>
+	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			DNA hash:
+		</div>
+		<div class='itemContent'>
+			{{:helper.link(data.dna_hash , 'pencil', {'action' : 'edit', 'dna_hash' : 1})}}
+		</div>
+	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			Fingerprint hash:
+		</div>
+		<div class='itemContent'>
+			{{:helper.link(data.fingerprint_hash , 'pencil', {'action' : 'edit', 'fingerprint_hash' : 1})}}
+		</div>
+	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			Blood type:
+		</div>
+		<div class='itemContent'>
+			{{:helper.link(data.blood_type , 'pencil', {'action' : 'edit', 'blood_type' : 1})}}
+		</div>
+	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			Edit front photo
+		</div>
+		<div class='itemContent'>
+			{{:helper.link('Use photo in your hands', 'pencil', {'action': 'edit', 'front_photo' : 1})}}
+		</div>
+	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			Edit side photo
+		</div>
+		<div class='itemContent'>
+			{{:helper.link('Use photo in your hands', 'pencil', {'action' : 'edit', 'side_photo' : 1})}}
+		</div>
+	</div>
+
+
+	<div class='item'>
+		<div class='itemLabel'>
+			Load data from crew records
+		</div>
+		<div class='itemContent'>
+			{{:helper.link('', 'pencil', {'action' : 'edit', 'load_data' : 1})}}
+		</div>
+	</div>
+
 
 	<div class='item'>
 	  <h2>Assignment</h2>
@@ -68,7 +148,7 @@
 		{{:helper.link(data.assignments ? "Hide assignments" : "Show assignments", 'gear', {'action' : 'togglea'})}}
 	<div class='item'>
 	  <span id='allvalue.jobsslot'>
-		
+
 	  </span>
 	</div>
 	<div class='item'>
@@ -99,7 +179,7 @@
 				{{:helper.link(value.display_name, '', {'action' : 'assign', 'assign_target' : value.job}, data.id_rank == value.job ? 'disabled' : null)}}
 			  {{/for}}
 			</td>
-		  </tr>	  
+		  </tr>
 		  <tr>
 			<th style="color: '#FFA500';">Engineering</th>
 			<td>
@@ -148,7 +228,7 @@
 			  {{/for}}
 			</td>
 		  </tr>
-		  
+
 		  <tr>
 			<th style="color: '#88b764';">Service</th>
 			<td>
