--- a/nano/templates/cryo.tmpl
+++ b/nano/templates/cryo.tmpl
@@ -18,6 +18,15 @@ Used In File(s): \code\game\machinery\cryo.dm
 	<div class="item">&nbsp;</div>
 	<div class="item">
 		<div class="itemLabel">
+			Biochemical Stasis:
+		</div>
+		<div class="itemContent" style="width: 40%;">
+			{{:helper.link('On', 'power', {'biochemicalStasisOn' : 1}, data.biochemicalStasis ? 'selected' : null)}}{{:helper.link('Off', 'close', {'biochemicalStasisOff' : 1}, data.biochemicalStasis ? null : 'selected')}}
+		</div>
+	</div>
+	<div class="item">&nbsp;</div>
+	<div class="item">
+		<div class="itemLabel">
 			Beaker:
 		</div>
 		<div class="itemContent" style="width: 40%;">
