--- a/nano/templates/sec_records.tmpl
+++ b/nano/templates/sec_records.tmpl
@@ -40,10 +40,16 @@
 		<h3>SECURITY DATA</h3>
 	</div>
 	{{for data.sec_fields}}
+		{{if value.name == "Recent Records"}}
+			<div class='statusDisplay'>
+				<div style = "text-align: center">
+					<h3>RECENT RECORDS</h3>
+				</div>
+		{{/if}}
 		<div class='item'>
 			{{if value.editable}}
 				{{if value.name == "Recent Records"}}
-					<div class='itemLabel'>{{:helper.link(value.name, 'plus', {'edit_field' : value.key}, null)}}</div>				
+					<div class='itemLabel'>{{:helper.link("Archivate current status", 'plus', {'edit_field' : value.key}, null)}}</div>
 				{{else}}
 					<div class='itemLabel'>{{:helper.link(value.name, 'pencil', {'edit_field' : value.key}, null)}}</div>
 				{{/if}}
@@ -58,6 +64,9 @@
 				<div class='itemBody'>{{:value.val}}</div>
 			{{/if}}
 		</div>
+		{{if value.name == "Recent Records"}}
+			</div>
+		{{/if}}
 	{{/for}}
 </div>
 
