--- a/nano/templates/adv_med.tmpl
+++ b/nano/templates/adv_med.tmpl
@@ -3,95 +3,228 @@ Title: Advanced medical scanner UI
 Used In File: \code\game\machinery\adv_med.dm
  -->
 
-<h3>Body scanner report</h3>
+ <!--
+     TODO: Move this to external file
+ -->
+ <style>
+.separatorBorder
+{
+    border-color: #b9b9b9;
+    border-style: solid none none none;
+}
 
-<div>
-    <div class="item">
-        <div class="itemLabel">
-            Occupant:
-        </div>
-        <div style="float: right">
-            {{:data.occupant}}
-        </div>
+.None
+{
+    color: #00ff00
+}
+
+.Minor
+{
+	color: #a09a00;
+}
+
+.Severe
+{
+    color: #d09000;
+}
+
+.Significant
+{
+    color: #ff5000
+}
+
+.Moderate
+{
+    color: #ff0000
+}
+table
+        {
+            width: 100%;
+            table-layout: fixed;
+            border: 1px dotted #444444;
+        }
+
+        .overflow
+        {
+            width: 100%;
+            overflow: auto;
+            border: 1px solid #ff0000;
+        }
+
+        td
+        {
+            word-wrap: normal;
+            border: 2px solid #aaaaaa;
+            border-style: dotted none none none
+        }
+ </style>
+
+<div class="item">
+    <div class="itemLabel">
+        Occupant:
     </div>
-    <div class="item">
-        <div class="itemLabel">
-            Scan Date:
-        </div>
-        <div style="float: right">
-            {{:data.scan_date}}
-        </div>
+    <div style="float: left;font-size: larger;">
+        <strong>{{:data.occupant}}</strong>
+    </div>
+</div>
+<div class="item">
+    <div class="itemLabel">
+        Scan Date:
+    </div>
+    <div style="float: left">
+        {{:data.scan_date}}
     </div>
 </div>
 
-<div>
-    <div class="separatorBorder">
+ <div class="separatorBorder">
+         <div class="item">
+             <div class="itemLabel">
+                 Brain activity:
+             </div>
+             <div class="itemContent">
+                 {{:helper.displayBar(data.brain_activity, 0, 100, data.brain_activity_status, data.brain_activity)}}
+             </div>
+         </div>
+
+         <div class="item">
+             <div class="itemLabel">
+                 Brain status:
+             </div>
+             <div class="itemContent">
+                 {{:helper.displayBar(data.brain_damage, 0, 100, data.brain_status, data.brain_damage)}}
+             </div>
+         </div>
+
+     <div class="separatorBorder">
+         <div class="item">
+             <div class="itemLabel">
+                 Pulse:
+             </div>
+             <div class="statusValue">
+                 {{:data.pulse}} BPM
+             </div>
+         </div>
+         <div class="item">
+             <div class="itemLabel">
+                 Blood pressure:
+             </div>
+             <div class="statusValue">
+                 {{:data.blood_pressure}}
+             </div>
+         </div>
+
+         <div class="item">
+             <div class="itemLabel">
+                 Blood volume:
+             </div>
+             <div class="itemContent">
+                 {{:helper.displayBar(data.blood_volume, 0, 100, data.blood_volume_status, data.blood_volume)}}
+             </div>
+         </div>
+
+         <div class="item">
+             <div class="itemLabel">
+                 Blood oxygenation:
+             </div>
+             <div class="itemContent">
+                 {{:helper.displayBar(data.blood_oxygenation, 0, 100, data.blood_oxygenation_status, data.blood_oxygenation)}}
+             </div>
+         </div>
+
+         <div class="item">
+             <div class="itemLabel">
+                 Blood type:
+             </div>
+             <div>
+                 {{:data.blood_type}}
+             </div>
+         </div>
+     </div>
+ </div>
+ <div class="warnings">
+     {{for data.warnings}}
+         <div class="notice">
+             {{:value}}
+         </div>
+     {{/for}}
+ </div>
+
+ <div class="separatorBorder">
+     <div class="item">
+         <div class="itemLabel">
+             Body temperature:
+         </div>
+         <div style="float: left">
+             {{:data.body_temperature}} C
+         </div>
+     </div>
+
+     {{if data.immunity != 1}}
         <div class="item">
             <div class="itemLabel">
-                Brain activity:
+                Imunnity:
             </div>
-            <div class="itemContent">
-                {{:helper.displayBar(data.brain_activity, 0, 100, data.brain_activity_status)}}
-            </div>
-            <div class="{{:data.brain_activity_status}}" style="float: right">
-                {{:data.brain_activity}}
+            <div style="float: left">
+                {{:helper.displayBar(data.immunity*100, 0, 100, 'average', data.immunity*100)}}
             </div>
         </div>
+     {{/if}}
 
-        <div class="item">
-            <div class="itemLabel">
-                Brain status:
+     {{for data.systemStatus}}
+        <div>
+            <div class="itemLabel" style="overflow: hidden; max-width: 5x;">
+                {{:value[0]}}:
             </div>
-            <div class="itemContent">
-                {{:helper.displayBar(data.brain_damage, 0, 100, data.brain_status)}}
-            </div>
-            <div class="{{:data.brain_status}}" style="float: right">
-                {{:data.brain_damage}}
-            </div>
+            <div class="{{:value[1]}}" style="float: left">
+                {{:value[1]}}
+            </div><br>
         </div>
-    </div>
+     {{/for}}
+ </div>
 
-    <div class="separatorBorder">
-        <div class="item">
-            <div class="itemLabel">
-                Pulse:
-            </div>
-            <div class="{{:data.pulse_status}}" style="float: right">
-                {{:data.pulse}}
-            </div>
-        </div>
+ <div class="separatorBorder">
+    <table>
+        <tr>
+            <th>Organ</th>
+            <th>Damage</th>
+            <th>Status</th>
+        </tr>
+            {{for data.external_organs}}
+            <tr>
+                    <td>
+                        {{:value[0]}}
+                    </td>
 
-        <div class="item">
-            <div class="itemLabel">
-                Blood volume:
-            </div>
-            <div class="itemContent">
-                {{:helper.displayBar(data.blood_volume, 0, data.blood_volume_max, data.blood_volume_status)}}
-            </div>
-            <div class="{{:data.blood_volume_status}}" style="float: right">
-                {{:data.blood_volume}}
-            </div>
-        </div>
-
-        <div class="item">
-            <div class="itemLabel">
-                Blood type:
-            </div>
-            <div class="highlight" style="float: right">
-                {{:data.blood_type}}
-            </div>
-        </div>
-
-
-
-
-    </div>
+                    <td class={{if value[2] != "None"}}"Severe"{{else}}"None"{{/if}}>
+                        {{:value[2]}}
+                    </td>
+                    <td class={{if value[2] != "None"}}"Severe"{{else}}"None"{{/if}}>
+                        {{:value[1]}}
+                    </td>
+            </tr>
+            {{/for}}
+    </table>
 </div>
+<div class="separatorBorder">
+    <table>
+        <tr>
+            <th>Organ</th>
+            <th>Damage</th>
+            <th>Status</th>
+        </tr>
+            {{for data.internal_organs}}
+            <tr>
+                    <td>
+                        {{:value[0]}}
+                    </td>
 
-<div class="warnings">
-    {{for data.warnings}}
-        <div class="notice">
-            {{:value}}
-        </div>
-    {{/for}}
+                    <td class={{:value[1]}}>
+                        {{:value[1]}}
+                    </td>
+                    <td class={{if value[2] != "None"}}"Severe"{{else}}"None"{{/if}}>
+                        {{:value[2]}}
+                    </td>
+            </tr>
+            {{/for}}
+    </table>
 </div>
