--- a/nano/templates/med_records.tmpl
+++ b/nano/templates/med_records.tmpl
@@ -34,10 +34,34 @@
 		</div>
 	{{/for}}
 </div>
+
+<div class='statusDisplay'>
+	<div style="text-align: center">
+		<h3>MEDICAL DATA</h3>
+	</div>
+	{{for data.med_fields}}
+		<div class='item'>
+			{{if value.editable}}
+				{{if value.name == "Recent Records"}}
+					<div class='itemLabel'>{{:helper.link(value.name, 'plus', {'edit_field' : value.key}, null)}}</div>				
+				{{else}}
+					<div class='itemLabel'>{{:helper.link(value.name, 'pencil', {'edit_field' : value.key}, null)}}</div>
+				{{/if}}
+			{{else}}
+				<div class='itemLabel'>{{:value.name}}:</div>
+			{{/if}}
+			{{if value.large}}
+				<div style="display: inline-block;">
+				{{:value.val}}
+				</div>
+			{{else}}
+				<div class='itemBody'>{{:value.val}}</div>
+			{{/if}}
+		</div>
+	{{/for}}
+</div>
+
 {{else}}
-{{if data.creation}}
-	{{:helper.link('New Record', 'document', {'new_record' : 1}, null)}}
-{{/if}}
 {{:helper.link('Name Search', 'search', {'search' : 'name'}, null)}}
 {{if data.dnasearch}}
 	{{:helper.link('DNA Search', 'search', {'search' : 'dna'}, null)}}
