--- a/nano/templates/identification_computer.tmpl
+++ b/nano/templates/identification_computer.tmpl
@@ -71,6 +71,14 @@
 		</div>
 	</div>
 
+	<div class='item'>
+		<div class='itemLabel'>
+			Card type:
+		</div>
+		<div class='itemContent'>
+			{{:helper.link(data.sex , 'pencil', {'action' : 'edit', 'card_icon' : 1})}}
+		</div>
+	</div>
 
 	<div class='item'>
 		<div class='itemLabel'>
