feat(pAI): add subsystems

--- a/nano/templates/pai_card_reader.tmpl
+++ b/nano/templates/pai_card_reader.tmpl
@@ -7,7 +7,7 @@ code/modules/mob/living/silicon/pai/software_modules.dm
 		Last Scanned ID:
 	</div>
 	<div class="itemContent">
-		{{:helper.link(data.authname, 'eject', {"stopic":"cardreader", "drop": 1}, null, 'itemContentWide')}}
+		{{:helper.link(data.authname, '', {"stopic":"cardreader"}, null, 'itemContentWide')}}
 	</div>
 </div>
 
